# mlb_projection_k

./: .gitignore  app.py  claude.md  pyproject.toml  requirements-dashboard.txt
.streamlit/: config.toml
config/: model.yaml
data/dashboard/: bf_priors.parquet  hitter_projections.parquet  pitcher_projections.parquet
docs/: AGENTS.md  advanced_projection_features.md  claude.md  style_guide.md
notebooks/: pitch_clusters.ipynb
scripts/: backfill_dim_player.py  generate_composite_cards.py  generate_preseason_content.py  precompute_dashboard_data.py  run_hitter_backtest.py  run_pitcher_backtest.py  run_season_backtest.py
src/data/: data_qa.py  db.py  feature_eng.py  league_baselines.py  pitch_archetypes.py  queries.py
src/evaluation/: backtesting.py  game_k_validation.py  hitter_backtest.py  pitcher_backtest.py
src/models/: bf_model.py  game_k_model.py  hitter_model.py  hitter_projections.py  k_rate_model.py  matchup.py  pitcher_k_rate_model.py  pitcher_model.py  pitcher_projections.py
src/utils/: constants.py
src/viz/: __init__.py  composite_cards.py  projections.py  theme.py
tests/: test_backtesting.py  test_bf_model.py  test_db_config.py  test_feature_eng.py  test_game_k_model.py  test_game_k_validation.py  test_hitter_model.py  test_hitter_projections.py  test_k_rate_model.py  test_league_baselines.py  test_matchup_archetype.py  test_model_integration.py  test_pitch_archetypes.py  test_pitcher_k_rate_model.py  test_pitcher_model.py  test_pitcher_projections.py
